test/invalid-syntax/59809_no_id_declared/no_id_declared.mag
-- Author: 59809, Manuel Leitão

const : Int = 5

fun main (_) : Unit -> Unit =
    print(5)